--- a/cards/2HU/149_Bad Apple.html
+++ b/cards/2HU/149_Bad Apple.html
@@ -364,7 +364,7 @@
 			
 			link = document.createElement("a");
 			link.href = "https://www.youtube.com/watch?v=FtutLA63Cp8";
-			link.innerText = "Bad Apple remix music video by Alstreoemeria Records";
+			link.innerText = "Bad Apple remix music video by Alstroemeria Records";
 			text.appendChild(link);
 			grid.appendChild(text);
 			
