--- a/search.html
+++ b/search.html
@@ -179,24 +179,17 @@
 		cursor: pointer;
 		border: none;
 		position: absolute;
-		top: 6.5%;
-		left: 8.5%;
-		transform: translate(-50%, -85%);
 		border-radius: 0px;
 		box-shadow: none;
+		left: 50%;
+		top: 48%;
+		transform: translate(-50%, -50%);
+		opacity: 0.5;
 	}
 	.img-container .btn:hover {
 		background: url('img/flip-hover.png') no-repeat;
 		background-size: contain;
 		background-position: center;
-		width: 15%;
-		height: 11%;
-		cursor: pointer;
-		border: none;
-		position: absolute;
-		top: 6.5%;
-		left: 8.5%;
-		transform: translate(-50%, -85%);
 	}
 	.img-container .hidden-text {
 		position: absolute;
@@ -246,6 +239,7 @@
 		let search_results = [];
 		let card_list_arrayified = [];
 		let specialchars = "";
+		let sets_json = {};
 
 		document.addEventListener("DOMContentLoaded", async function () {
 			await fetch('/lists/all-cards.json')
@@ -261,6 +255,15 @@
 				}).catch(error => console.error('Error:', error));
 
 				card_list_arrayified = card_list.cards;
+
+
+			await fetch('/lists/all-sets.json')
+					.then(response => response.json())
+					.then(data => {
+						sets_json = data; 
+				}).catch(error => console.error('Error:', error));
+
+			card_list_arrayified = card_list.cards;
 
 			if (sessionStorage.getItem("display") != "cards-only")
 			{
@@ -515,7 +518,7 @@
 			cardGrid.innerHTML = "";
 
 			for (const card of card_list_arrayified) {
-				if (card[10].includes("token") && !searchTerms.includes("*t:token") && !searchTerms.includes("t:token"))
+				if (card.shape.includes("token") && !searchTerms.includes("*t:token") && !searchTerms.includes("t:token"))
 				{
 					continue;
 				}
@@ -586,7 +589,7 @@
 		{
 			for (const li of list)
 			{
-				if (li[0] == card[0] && li[3] == card[3])
+				if (li.card_name == card.card_name && li.type == card.type)
 				{
 					return true;
 				}
@@ -668,49 +671,111 @@
 			}
 		}
 
+		function removeDuplicateChars(str)
+		{
+			let ret_str = '';
+
+			for (const c of str)
+			{
+				if (!ret_str.includes(c))
+				{
+					ret_str += c;
+				}
+			}
+
+			return ret_str;
+		}
+
 		function searchToken(card, token)
 		{
 			let card_stats = [];
 
-			for (let i = 0; i < card.length; i++)
+			for (var key in card)
 			{
-				card_stats.push(card[i].toLowerCase());
+				if (isNaN(card[key]))
+				{
+					card_stats[key] = card[key].toLowerCase();
+				}
+				else
+				{
+					card_stats[key] = card[key];
+				}
 			}
 
-			let card_name = card_stats[0];
-			let card_color = card_stats[1] != "" ? card_stats[1] : "c";
-			let card_rarity = card_stats[2];
-			let card_type = card_stats[3];
+			let card_name = card_stats.card_name;
+			let card_color = card_stats.color != "" ? card_stats.color : "c";
+			let card_rarity = card_stats.rarity;
+			let card_type = card_stats.type;
 			// 4: collector number
-			let card_ci = card_stats[5];
-			let card_cost = card_stats[6];
-			let card_mv = (isDecimal(card_cost.charAt(0)) ? parseInt(card_cost) + card_cost.replaceAll('x','').length - 1 : card_cost.replaceAll('x','').length) - ((card_cost.split('/').length - 1) * 2);
-			let card_oracle_text = card_stats[7] != "" ? card_stats[7].replaceAll("NEWLINE", '\n') : card_stats[9].replaceAll("NEWLINE", '\n');
-			let card_power = card_stats[8].substring(0,card_stats[8].indexOf('/'));
-			let card_toughness = card_stats[8].substring(card_stats[8].indexOf('/')+1);
-			let card_shape = card_stats[10];
-			let card_set = card_stats[11];
-			let card_loyalty = card_stats[12];
-			let card_notes = card_stats[card_stats.length - 1].replaceAll("NEWLINE", '\n');
+			let card_ci = removeDuplicateChars(card_stats.color_identity);
+			let card_cost = card_stats.cost;
+			let card_mv = isDecimal(card_cost.charAt(1)) ? parseInt(card_cost.substring(1, card_cost.indexOf('}'))) + card_cost.replaceAll('x','').split('{').length - 2 : card_cost.replaceAll('x','').split('{').length - 1;
+			//Strip out the lingering [i][/i] and [b][/b] tags while we're searching just in case someone decided to bold something in the
+			//middle of their rules text for some reason
+			let card_oracle_text = card_stats.rules_text != "" ? card_stats.rules_text.replace(/\[(\/)?([ib])\]/g, "") : card_stats.special_text.replace(/\[(\/)?([ib])\]/g, "");
+			let card_power = card_stats.pt.substring(0,card_stats.pt.indexOf('/'));
+			let card_toughness = card_stats.pt.substring(card_stats.pt.indexOf('/')+1);
+			let card_shape = card_stats.shape;
+			let card_set = card_stats.set;
+			let card_loyalty = card_stats.loyalty;
+			let card_notes = card_stats.notes;
+			let card_color_2 = "";
+			let card_cost_2 = "";
+			let card_power_2 = "";
+			let card_toughness_2 = "";
+			let card_loyalty_2 = ""
+
+			let color_map = new Map([
+				["azorius", "wu"],
+				["dimir", "ub"],
+				["rakdos", "br"],
+				["gruul", "rg"],
+				["selesnya", "gw"],
+				["orzhov", "wb"],
+				["golgari", "bg"],
+				["simic", "gu"],
+				["izzet", "ur"],
+				["boros", "rw"],
+				["esper", "wub"],
+				["grixis", "ubr"],
+				["jund", "brg"],
+				["naya", "rgw"],
+				["bant", "gwu"],
+				["abzan", "wbg"],
+				["sultai", "bgu"],
+				["temur", "gur"],
+				["jeskai", "urw"],
+				["mardu", "rwb"],
+			]);
 
 			// two cards in one
 			if (card_shape.includes("adventure") || card_shape.includes("double") || card_shape.includes("spli"))
 			{
-				card_name = card_name + "	" + card_stats[13];
-				card_type = card_type + "	" + card_stats[15];
-				card_oracle_text = card_oracle_text + "	" + (card_stats[18] != "" ? card_stats[18].replaceAll("NEWLINE", '\n') : card_stats[20].replaceAll("NEWLINE", '\n'));
+				card_name = card_name + "	" + card_stats.card_name2;
+				card_type = card_type + "	" + card_stats.type2;
+				card_oracle_text = card_oracle_text + "	" + (card_stats.rules_text2 != "" ? card_stats.rules_text2.replace(/\[(\/)?([ib])\]/g, "") : card_stats.special_text2.replace(/\[(\/)?([ib])\]/g, ""));
+				card_color_2 = card_stats.color2 != "" ? card_stats.color2 : "c";
+				card_cost_2 = card_stats.cost2;
+				card_power_2 = card_stats.pt2.substring(0,card_stats.pt2.indexOf('/'));
+				card_toughness_2 = card_stats.pt.substring(card_stats.pt.indexOf('/')+1);
+				card_loyalty_2 = card_stats.loyalty2;
 			}
 
 			token = token.replaceAll("~", card_name).replaceAll("cardname", card_name).replaceAll('"','').replaceAll('/','').replaceAll('“','').replaceAll('”','');
 
-			const modifierRegex = /[!:<>=]/;
-			const match = token.search(modifierRegex);
+			const modifierRegex = /[!:<>=]+/g;
+			const match = token.match(modifierRegex);
 
-			if (match > -1)
+			if (match)
 			{
-				const term = token.substring(0, match);
-				const modifier = token.charAt(match);
-				let check = token.substring(match + 1);
+				const modifier = match[0];
+				const term = token.substring(0, token.indexOf(modifier));
+				let check = token.substring(token.indexOf(modifier) + modifier.length);
+
+				if (color_map.has(check))
+				{
+					check = color_map.get(check);
+				}
 
 				// availableTokens = ["mv", "c", "ci", "t", "o", "pow", "tou", "r", "is"]
 
@@ -752,6 +817,14 @@
 					{
 						return (card_mv > check);
 					}
+					else if (modifier == "<=")
+					{
+						return (card_mv <= check);
+					}
+					else if (modifier == ">=")
+					{
+						return (card_mv >= check);
+					}
 				}
 				if (term == "c" || term == "color")
 				{
@@ -777,7 +850,7 @@
 						{
 							return card_color.length < parseInt(check);
 						}
-						return hasNoChars(card_color, check);
+						return card_color == "c" || (check.length > card_color.length && hasAllChars(check, card_color));
 					}
 					else if (modifier == ">")
 					{
@@ -785,10 +858,34 @@
 						{
 							return card_color.length > parseInt(check);
 						}
-						return hasAllAndMoreChars(card_color, check);
+						return card_color.length > check.length && hasAllChars(card_color, check);
+					}
+					else if (modifier == "<=")
+					{
+						if (!isNaN(check))
+						{
+							return card_color.length <= parseInt(check);
+						}
+						return card_color == "c" || hasAllChars(check, card_color);
+					}
+					else if (modifier == ">=")
+					{
+						if (!isNaN(check))
+						{
+							return card_color.length >= parseInt(check);
+						}
+						return hasAllChars(card_color, check);
 					}
 				}
-				if (term == "ci")
+				if (term == "cost" || term == "mana")
+				{
+					if (modifier == "!" || modifier == "=" || modifier == ":")
+					{
+						card_cost_cleaned = card_cost.replaceAll('{', '').replaceAll('}', '');
+						return check == card_cost || check == card_cost_cleaned;
+					}
+				}
+				if (term == "ci" || term == "id")
 				{
 					if (modifier == "!" || modifier == "=")
 					{
@@ -813,7 +910,7 @@
 						{
 							return card_ci.length < parseInt(check);
 						}
-						return hasNoChars(card_ci, check);
+						return card_ci == "c" || (check.length > card_ci.length && hasAllChars(check, card_ci));
 					}
 					else if (modifier == ">")
 					{
@@ -822,7 +919,23 @@
 						{
 							return card_ci.length > parseInt(check);
 						}
-						return hasAllAndMoreChars(card_ci, check);
+						return card_ci.length > check.length && hasAllChars(card_ci, check);
+					}
+					else if (modifier == "<=")
+					{
+						if (!isNaN(check))
+						{
+							return card_ci.length <= parseInt(check);
+						}
+						return card_ci == "c" || hasAllChars(check, card_ci);
+					}
+					else if (modifier == ">=")
+					{
+						if (!isNaN(check))
+						{
+							return card_ci.length >= parseInt(check);
+						}
+						return hasAllChars(card_ci, check);
 					}
 				}
 				if (term == "t" || term == "type")
@@ -866,7 +979,7 @@
 
 					} */
 				}
-				if (term == "pow")
+				if (term == "pow" || term == "power")
 				{
 					if (modifier == "!" || modifier == "=")
 					{
@@ -884,8 +997,16 @@
 					{
 						return (card_power > check);
 					}
+					else if (modifier == "<=")
+					{
+						return (card_power <= check);
+					}
+					else if (modifier == ">=")
+					{
+						return (card_power >= check);
+					}
 				}
-				if (term == "tou")
+				if (term == "tou" || term == "toughness")
 				{
 					if (modifier == "!" || modifier == "=")
 					{
@@ -902,6 +1023,14 @@
 					else if (modifier == ">")
 					{
 						return (card_toughness > check);
+					}
+					else if (modifier == "<=")
+					{
+						return (card_toughness <= check);
+					}
+					else if (modifier == ">=")
+					{
+						return (card_toughness >= check);
 					}
 				}
 				if (term == "r" || term == "rarity")
@@ -926,6 +1055,14 @@
 					{
 						return rarities.includes(card_rarity) && rarities.indexOf(card_rarity) > rarities.indexOf(check);
 					}
+					else if (modifier == "<=")
+					{
+						return rarities.includes(card_rarity) && rarities.indexOf(card_rarity) <= rarities.indexOf(check);
+					}
+					else if (modifier == ">=")
+					{
+						return rarities.includes(card_rarity) && rarities.indexOf(card_rarity) >= rarities.indexOf(check);
+					}
 				}
 				if (term == "e" || term == "set")
 				{
@@ -947,8 +1084,8 @@
 				{
 					if (modifier == ":" || modifier == "!" || modifier == "=")
 					{
-						regex_kw1 = new RegExp(`(^|newline|, )${check}[^.]*($|newline|\\()`, "g");
-						regex_kw2 = new RegExp(`(^|newline)${check} `, "g");
+						regex_kw1 = new RegExp(`(^|\n|, )${check}[^.]*($|\n|\\()`, "g");
+						regex_kw2 = new RegExp(`(^|\n)${check} `, "g");
 						return regex_kw1.test(card_oracle_text) || regex_kw2.test(card_oracle_text);
 					}
 					/* unsupported flows
@@ -960,6 +1097,20 @@
 					{
 
 					} */
+				}
+				if (term == "f" || term=="format")
+				{
+					if (modifier == ":" || modifier == "!" || modifier == "=")
+					{
+						for (const set of sets_json.sets)
+						{
+							if (set.set_code.toLowerCase() == card_set)
+							{
+								return set.formats.toLowerCase().includes(check);
+							}
+						}
+					}
+					return false;
 				}
 				if (term == "is")
 				{
@@ -980,7 +1131,14 @@
 						}
 						if (check == "hybrid")
 						{
-							return (card_cost.includes("/"));
+							for (let i = 0; i < card_cost.length - 2; i++)
+							{
+								if (card_cost[i] != '{' && card_cost[i] != '}' && card_cost[i + 1] != '{' && card_cost[i + 1] != '}' && !isDecimal(card_cost[i + 1]))
+								{
+									return true;
+								}
+							}
+							return false;
 						}
 					}
 					/* unsupported flows
@@ -1003,9 +1161,7 @@
 			}
 
 			return card_name.includes(token);
-		}
-
-		function isDecimal(char) {
+		}function isDecimal(char) {
 			return char >= '0' && char <= '9';
 		}
 
@@ -1063,7 +1219,7 @@
 		}
 
 		function gridifyCard(card_stats) {
-			const card_name = card_stats[0];
+			const card_name = card_stats.card_name;
 
 			if (displayStyle == "cards-only")
 			{
