--- a/deckbuilder.html
+++ b/deckbuilder.html
@@ -2016,7 +2016,7 @@
 			}
 			for (const card_map of Array.from(map.keys()))
 			{
-				deck_text += map.get(card_map) + " " + (export_as == "export-dek" ? card_map : JSON.parse(card_map)[0]) + "\n";
+				deck_text += map.get(card_map) + " " + (export_as == "export-dek" ? card_map : JSON.parse(card_map).card_name) + "\n";
 			}
 			if (sideboard.length != 0)
 			{
@@ -2035,7 +2035,7 @@
 				}
 				for (const card_map of Array.from(map.keys()))
 				{
-					deck_text += map.get(card_map) + " " + (export_as == "export-dek" ? card_map : JSON.parse(card_map)[0]) + "\n";
+					deck_text += map.get(card_map) + " " + (export_as == "export-dek" ? card_map : JSON.parse(card_map).card_name) + "\n";
 				}
 			}
 
