--- a/2HU-spoiler.html
+++ b/2HU-spoiler.html
@@ -151,6 +151,8 @@
 	<img class="preload-hidden" src="/img/dot.png" />
 	<img class="preload-hidden" src="/sets/2HU-files/logo.png" />
 	<img class="preload-hidden" src="/sets/2HU-files/icon.png" />
+		<img class="preload-hidden" id="bg" src="/sets/2HU-files/bg.png" />
+		
 		<div class="header">
 		<div class="search-grid">
 			<a href="/"><img class="sg-logo" src="/img/banner.png"></a>
@@ -680,7 +682,7 @@
 		}
 		while (images_loaded.includes(false));
 
-		
+		document.body.style.backgroundImage = 'url(' + document.getElementById("bg").src + ')';
 		loadImages();
 	});
 
