Additional Link Update

--- a/previews/2HU.html
+++ b/previews/2HU.html
@@ -218,7 +218,7 @@
 			<div class="container"><img alt="/sets\2HU-files\img\140_Guard Tiger.png" id="140_Guard Tiger" data-flag="@X" onclick="openSidebar('140_Guard Tiger',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\19_Keiki, the Sculptor God.png" id="19_Keiki, the Sculptor God" data-flag="@X" onclick="openSidebar('19_Keiki, the Sculptor God',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\43_Cosmic Mind.png" id="43_Cosmic Mind" data-flag="@X" onclick="openSidebar('43_Cosmic Mind',false)"></div>
-			<div class="container"><img alt="/sets\2HU-files\img\83_Lets Live in a Lovely Cemetery.png" id="83_Lets Live in a Lovely Cemetery" data-flag="@X" onclick="openSidebar('83_Lets Live in a Lovely Cemetery',false)"></div>
+			<div class="container"><img alt="/sets\2HU-files\img\83_Let's Live in a Lovely Cemetery.png" id="83_Lets Live in a Lovely Cemetery" data-flag="@X" onclick="openSidebar('83_Lets Live in a Lovely Cemetery',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\119_Seija, Bane of Gensokyo.png" id="119_Seija, Bane of Gensokyo" data-flag="@X" onclick="openSidebar('119_Seija, Bane of Gensokyo',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\141_Kagerou, Bamboos Loup-Garou.png" id="141_Kagerou, Bamboos Loup-Garou" data-flag="@X" onclick="openSidebar('141_Kagerou, Bamboos Loup-Garou',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\25_Mayumi Joutougu.png" id="25_Mayumi Joutougu" data-flag="@X" onclick="openSidebar('25_Mayumi Joutougu',false)"></div>
@@ -445,7 +445,7 @@
 			<div class="container"><img alt="/sets\2HU-files\img\250_Yamame Kurodani.png" id="250_Yamame Kurodani" data-flag="@X" onclick="openSidebar('250_Yamame Kurodani',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\249_Yachie Kicchou.png" id="249_Yachie Kicchou" data-flag="@X" onclick="openSidebar('249_Yachie Kicchou',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\182_Iku Nagae.png" id="182_Iku Nagae" data-flag="@X" onclick="openSidebar('182_Iku Nagae',false)"></div>
-			<div class="container"><img alt="/sets\2HU-files\img\202_Maidens Capriccio.png" id="202_Maidens Capriccio" data-flag="@X" onclick="openSidebar('202_Maidens Capriccio',false)"></div>
+			<div class="container"><img alt="/sets\2HU-files\img\202_Maiden's Capriccio.png" id="202_Maidens Capriccio" data-flag="@X" onclick="openSidebar('202_Maidens Capriccio',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\230_Sagume, the Reversed Fortune.png" id="230_Sagume, the Reversed Fortune" data-flag="@X" onclick="openSidebar('230_Sagume, the Reversed Fortune',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\196_Living God's Charm.png" id="196_Living Gods Charm" data-flag="@X" onclick="openSidebar('196_Living Gods Charm',false)"></div>
@@ -469,7 +469,7 @@
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
-			<div class="container"><img alt="/sets\2HU-files\img\220_Ordinary Magicians Charm.png" id="220_Ordinary Magicians Charm" data-flag="@X" onclick="openSidebar('220_Ordinary Magicians Charm',false)"></div>
+			<div class="container"><img alt="/sets\2HU-files\img\220_Ordinary Magician's Charm.png" id="220_Ordinary Magicians Charm" data-flag="@X" onclick="openSidebar('220_Ordinary Magicians Charm',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
