--- a/previews/R&S.html
+++ b/previews/R&S.html
@@ -186,17 +186,17 @@
 			<div class="grid-container">
 				<div class="container"><img alt="/sets\R&S-files\img\2_Matti, the Paladin.png" id="2_Matti, the Paladin" data-flag="@X" onclick="openSidebar('2_Matti, the Paladin',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\7_Twili, the Valedictorian.png" id="7_Twili, the Valedictorian" data-flag="@X" onclick="openSidebar('7_Twili, the Valedictorian',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\8_Get In The Circle.png" id="8_Get In The Circle" data-flag="@X" onclick="openSidebar('8_Get In The Circle',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\9_Merran, the Steeltooth.png" id="9_Merran, the Steeltooth" data-flag="@X" onclick="openSidebar('9_Merran, the Steeltooth',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\12_Ranalie, the Mythril.png" id="12_Ranalie, the Mythril" data-flag="@X" onclick="openSidebar('12_Ranalie, the Mythril',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\14_Avy, the Starry.png" id="14_Avy, the Starry" data-flag="@X" onclick="openSidebar('14_Avy, the Starry',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\3_Nimi, the Archer.png" id="3_Nimi, the Archer" data-flag="@X" onclick="openSidebar('3_Nimi, the Archer',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\5_Saya, the Archon.png" id="5_Saya, the Archon" data-flag="@X" onclick="openSidebar('5_Saya, the Archon',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\9_Merran, the Steeltooth.png" id="9_Merran, the Steeltooth" data-flag="@X" onclick="openSidebar('9_Merran, the Steeltooth',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\10_Tassha, the Snowfur.png" id="10_Tassha, the Snowfur" data-flag="@X" onclick="openSidebar('10_Tassha, the Snowfur',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\11_Karsi, the Ruby.png" id="11_Karsi, the Ruby" data-flag="@X" onclick="openSidebar('11_Karsi, the Ruby',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\15_Blush, the Painter.png" id="15_Blush, the Painter" data-flag="@X" onclick="openSidebar('15_Blush, the Painter',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\4_Steel Yourself!.png" id="4_Steel Yourself!" data-flag="@X" onclick="openSidebar('4_Steel Yourself!',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\6_Stretch the Tether.png" id="6_Stretch the Tether" data-flag="@X" onclick="openSidebar('6_Stretch the Tether',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\10_Tassha, the Snowfur.png" id="10_Tassha, the Snowfur" data-flag="@X" onclick="openSidebar('10_Tassha, the Snowfur',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\8_Get In The Circle.png" id="8_Get In The Circle" data-flag="@X" onclick="openSidebar('8_Get In The Circle',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\13_They Were Roommates.png" id="13_They Were Roommates" data-flag="@X" onclick="openSidebar('13_They Were Roommates',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\16_Defensive Move.png" id="16_Defensive Move" data-flag="@X" onclick="openSidebar('16_Defensive Move',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
@@ -249,15 +249,15 @@
 			<div class="container"><img alt="/sets\R&S-files\img\32_The King's Arsenal.png" id="32_The Kings Arsenal" data-flag="@X" onclick="openSidebar('32_The Kings Arsenal',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\34_The Red Darkhouse.png" id="34_The Red Darkhouse" data-flag="@X" onclick="openSidebar('34_The Red Darkhouse',false)"></div>
 			<div class="container"><img alt="/sets\R&S-files\img\30_The Emerald Lakeside.png" id="30_The Emerald Lakeside" data-flag="@X" onclick="openSidebar('30_The Emerald Lakeside',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\31_Kingdom Outskirts.png" id="31_Kingdom Outskirts" data-flag="@X" onclick="openSidebar('31_Kingdom Outskirts',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\33_The Moonlit Pinnacle.png" id="33_The Moonlit Pinnacle" data-flag="@X" onclick="openSidebar('33_The Moonlit Pinnacle',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
-			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
-			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\2t_A Nice Hat.png" id="2t_A Nice Hat" data-flag="@X" onclick="openSidebar('2t_A Nice Hat',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\3t_Treasure.png" id="3t_Treasure" data-flag="@X" onclick="openSidebar('3t_Treasure',false)"></div>
-			<div class="container"><img alt="/sets\R&S-files\img\1t_Varmint.png" id="1t_Varmint" data-flag="@X" onclick="openSidebar('1t_Varmint',false)"></div>
-			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\3t_A Nice Hat.png" id="3t_A Nice Hat" data-flag="@X" onclick="openSidebar('3t_A Nice Hat',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\4t_Treasure.png" id="4t_Treasure" data-flag="@X" onclick="openSidebar('4t_Treasure',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\1t_Mouse Knight.png" id="1t_Mouse Knight" data-flag="@X" onclick="openSidebar('1t_Mouse Knight',false)"></div>
+			<div class="container"><img alt="/sets\R&S-files\img\2t_Varmint.png" id="2t_Varmint" data-flag="@X" onclick="openSidebar('2t_Varmint',false)"></div>
 			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
