--- a/previews/2HU.html
+++ b/previews/2HU.html
@@ -373,12 +373,12 @@
 			<div class="container"><img alt="/sets\2HU-files\img\239_Sakuya, Scarlet Guardian.png" id="239_Sakuya, Scarlet Guardian" data-flag="@X" onclick="openSidebar('239_Sakuya, Scarlet Guardian',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\233_Reisen, Lunatic Moon Rabbit.png" id="233_Reisen, Lunatic Moon Rabbit" data-flag="@X" onclick="openSidebar('233_Reisen, Lunatic Moon Rabbit',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\183_Hong Meiling.png" id="183_Hong Meiling" data-flag="@X" onclick="openSidebar('183_Hong Meiling',false)"></div>
-			<div class="container"><img alt="/sets\2HU-files\img\201_Louise, Visitor from Makai.png" id="201_Louise, Visitor from Makai" data-flag="@X" onclick="openSidebar('201_Louise, Visitor from Makai',false)"></div>
+			<div class="container"><img alt="/sets\2HU-files\img\182_Hina Kagiyama.png" id="182_Hina Kagiyama" data-flag="@N" onclick="openSidebar('182_Hina Kagiyama',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\235_Rikako Asakura.png" id="235_Rikako Asakura" data-flag="@X" onclick="openSidebar('235_Rikako Asakura',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\252_Tsukasa, Daitengu's Consultant.png" id="252_Tsukasa, Daitengus Consultant" data-flag="@X" onclick="openSidebar('252_Tsukasa, Daitengus Consultant',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\234_Remilia, Fate's Mistress.png" id="234_Remilia, Fates Mistress" data-flag="@X" onclick="openSidebar('234_Remilia, Fates Mistress',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\236_Romantic Fall.png" id="236_Romantic Fall" data-flag="@X" onclick="openSidebar('236_Romantic Fall',false)"></div>
-			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
+			<div class="container"><img alt="/sets\2HU-files\img\201_Louise, Visitor from Makai.png" id="201_Louise, Visitor from Makai" data-flag="@X" onclick="openSidebar('201_Louise, Visitor from Makai',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\220_Nazrin, Treasure Tracker.png" id="220_Nazrin, Treasure Tracker" data-flag="@X" onclick="openSidebar('220_Nazrin, Treasure Tracker',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\167_Captain Murasa.png" id="167_Captain Murasa" data-flag="@X" onclick="openSidebar('167_Captain Murasa',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\204_Lullaby of a Deserted Hell.png" id="204_Lullaby of a Deserted Hell" data-flag="@X" onclick="openSidebar('204_Lullaby of a Deserted Hell',false)"></div>
@@ -649,11 +649,6 @@
 			<div class="container"><img alt="/sets\2HU-files\img\22t_Wizard.png" id="22t_Wizard" data-flag="@X" onclick="openSidebar('22t_Wizard',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\23t_Youkai.png" id="23t_Youkai" data-flag="@X" onclick="openSidebar('23t_Youkai',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\24t_Youkai.png" id="24t_Youkai" data-flag="@X" onclick="openSidebar('24t_Youkai',false)"></div>
-			<div class="container"><img alt="/sets\2HU-files\img\182t_Hina Kagiyama.png" id="182t_Hina Kagiyama" data-flag="@X" onclick="openSidebar('182t_Hina Kagiyama',false)"></div>
-			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
-			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
-			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
-			<div class="container"><img alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 			<div class="container"><img alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
