--- a/previews/2HU.html
+++ b/previews/2HU.html
@@ -373,7 +373,7 @@
 			<div class="container"><img alt="/sets\2HU-files\img\239_Sakuya, Scarlet Guardian.png" id="239_Sakuya, Scarlet Guardian" data-flag="@X" onclick="openSidebar('239_Sakuya, Scarlet Guardian',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\233_Reisen, Lunatic Moon Rabbit.png" id="233_Reisen, Lunatic Moon Rabbit" data-flag="@X" onclick="openSidebar('233_Reisen, Lunatic Moon Rabbit',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\183_Hong Meiling.png" id="183_Hong Meiling" data-flag="@X" onclick="openSidebar('183_Hong Meiling',false)"></div>
-			<div class="container"><img alt="/sets\2HU-files\img\182_Hina Kagiyama.png" id="182_Hina Kagiyama" data-flag="@N" onclick="openSidebar('182_Hina Kagiyama',false)"></div>
+			<div class="container"><img alt="/sets\2HU-files\img\182_Hina Kagiyama.png" id="182_Hina Kagiyama" data-flag="@X" onclick="openSidebar('182_Hina Kagiyama',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\235_Rikako Asakura.png" id="235_Rikako Asakura" data-flag="@X" onclick="openSidebar('235_Rikako Asakura',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\252_Tsukasa, Daitengu's Consultant.png" id="252_Tsukasa, Daitengus Consultant" data-flag="@X" onclick="openSidebar('252_Tsukasa, Daitengus Consultant',false)"></div>
 			<div class="container"><img alt="/sets\2HU-files\img\234_Remilia, Fate's Mistress.png" id="234_Remilia, Fates Mistress" data-flag="@X" onclick="openSidebar('234_Remilia, Fates Mistress',false)"></div>
