--- a/previews/R&S.html
+++ b/previews/R&S.html
@@ -178,6 +178,8 @@
 	<img class="preload-hidden" src="/sets/R&S-files/logo.png" />
 	<img class="preload-hidden" src="/sets/2HU-files/icon.png" />
 		<img class="preload-hidden" src="/sets/R&S-files/icon.png" />
+		<img class="preload-hidden" id="bg" src="/sets/R&S-files/bg.png" />
+
 		<div class="header">
 		<div class="search-grid">
 			<a href="/"><img class="sg-logo" src="/img/banner.png"></a>
@@ -346,7 +348,7 @@
 		}
 		while (images_loaded.includes(false));
 
-		
+		document.body.style.backgroundImage = 'url(' + document.getElementById("bg").src + ')';
 		loadImages();
 	});
 
