New set AKU added

--- a/all-sets.html
+++ b/all-sets.html
@@ -103,6 +103,13 @@
 				<div>335</div>
 			</a>
 			
+			<a href="/sets/AKU" class="set-row"> 
+				<img src="/sets/AKU-files/icon.png">
+				<div class="set-title">Akyuu’s Untouched Chronicle</div>
+				<div>AKU</div>
+				<div>41</div>
+			</a>
+			
 			<a href="/sets/R&S" class="set-row"> 
 				<img src="/sets/R&S-files/icon.png">
 				<div class="set-title">Steel Yourself! A Rabbit & Steel Miniset</div>
