--- a/index.html
+++ b/index.html
@@ -216,6 +216,10 @@
 									<div class="set-icon-name">Universes Beyond: The Touhou Project</div></a>
 								</div>
 				<div class="set-icon-container">
+									<a href="previews/AKU"><div class="set-icon"><img src="sets/AKU-files/icon.png" title="Akyuu’s Untouched Chronicle"></img></div>
+									<div class="set-icon-name">Akyuu’s Untouched Chronicle</div></a>
+								</div>
+				<div class="set-icon-container">
 									<a href="previews/R&S"><div class="set-icon"><img src="sets/R&S-files/icon.png" title="Steel Yourself! A Rabbit & Steel Miniset"></img></div>
 									<div class="set-icon-name">Steel Yourself! A Rabbit & Steel Miniset</div></a>
 								</div>
