--- a/previews/2HU.html
+++ b/previews/2HU.html
@@ -177,6 +177,7 @@
 	<img class="preload-hidden" src="/img/dot.png" />
 	<img class="preload-hidden" src="/sets/2HU-files/logo.png" />
 	<img class="preload-hidden" src="/sets/2HU-files/icon.png" />
+		<img class="preload-hidden" src="/sets/AKU-files/icon.png" />
 		<img class="preload-hidden" src="/sets/R&S-files/icon.png" />
 		<img class="preload-hidden" id="bg" src="/sets/2HU-files/bg.png" />
 
@@ -194,6 +195,8 @@
 	<div class="dropdown" id="dropdown" onmouseenter="rolldown()" onmouseleave="rollup()">
 	
 		<a class="set-bar" href="2HU"><img src="/sets/2HU-files/icon.png">Universes Beyond: The Touhou Project</a>
+	
+		<a class="set-bar inactive" href="AKU"><img src="/sets/AKU-files/icon.png">Akyuu’s Untouched Chronicle</a>
 	
 		<a class="set-bar inactive" href="R&S"><img src="/sets/R&S-files/icon.png">Steel Yourself! A Rabbit & Steel Miniset</a>
 	
