--- a/previews/AKU.html
+++ b/previews/AKU.html
@@ -236,15 +236,15 @@
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div id="gold" class="anchor"></div>
-				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\52.png" id="52" data-flag="@X" onclick="openSidebar('52',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\60.png" id="60" data-flag="@X" onclick="openSidebar('60',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\27.png" id="27" data-flag="@X" onclick="openSidebar('27',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\31.png" id="31" data-flag="@X" onclick="openSidebar('31',false)"></div>
-				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\48.png" id="48" data-flag="@X" onclick="openSidebar('48',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\56.png" id="56" data-flag="@X" onclick="openSidebar('56',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\43.png" id="43" data-flag="@X" onclick="openSidebar('43',false)"></div>
-				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\52.png" id="52" data-flag="@X" onclick="openSidebar('52',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\51.png" id="51" data-flag="@X" onclick="openSidebar('51',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\46.png" id="46" data-flag="@X" onclick="openSidebar('46',false)"></div>
-				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\48.png" id="48" data-flag="@X" onclick="openSidebar('48',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\47.png" id="47" data-flag="@X" onclick="openSidebar('47',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
@@ -253,21 +253,31 @@
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\29.png" id="29" data-flag="@X" onclick="openSidebar('29',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\28.png" id="28" data-flag="@X" onclick="openSidebar('28',false)"></div>
-				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\55.png" id="55" data-flag="@X" onclick="openSidebar('55',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\59.png" id="59" data-flag="@X" onclick="openSidebar('59',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\42.png" id="42" data-flag="@X" onclick="openSidebar('42',false)"></div>
-				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\54.png" id="54" data-flag="@X" onclick="openSidebar('54',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\44.png" id="44" data-flag="@X" onclick="openSidebar('44',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\49.png" id="49" data-flag="@X" onclick="openSidebar('49',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\50.png" id="50" data-flag="@X" onclick="openSidebar('50',false)"></div>
-				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\55.png" id="55" data-flag="@X" onclick="openSidebar('55',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\53.png" id="53" data-flag="@X" onclick="openSidebar('53',false)"></div>
-				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\44.png" id="44" data-flag="@X" onclick="openSidebar('44',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\54.png" id="54" data-flag="@X" onclick="openSidebar('54',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\33.png" id="33" data-flag="@X" onclick="openSidebar('33',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\57.png" id="57" data-flag="@X" onclick="openSidebar('57',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\30.png" id="30" data-flag="@X" onclick="openSidebar('30',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\58.png" id="58" data-flag="@X" onclick="openSidebar('58',false)"></div>
+				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
+				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
+				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
+				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
+				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
+				<div id="colorless" class="anchor"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\61.png" id="61" data-flag="@X" onclick="openSidebar('61',false)"></div>
+				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
@@ -298,7 +308,7 @@
 				<div id="token" class="anchor"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\45.png" id="45" data-flag="@X" onclick="openSidebar('45',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\7.png" id="7" data-flag="@X" onclick="openSidebar('7',false)"></div>
-				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\62.png" id="62" data-flag="@X" onclick="openSidebar('62',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
