--- a/previews/AKU.html
+++ b/previews/AKU.html
@@ -276,9 +276,9 @@
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div id="colorless" class="anchor"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\64.png" id="64" data-flag="@X" onclick="openSidebar('64',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\65.png" id="65" data-flag="@X" onclick="openSidebar('65',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\61.png" id="61" data-flag="@X" onclick="openSidebar('61',false)"></div>
-				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
-				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
@@ -306,10 +306,10 @@
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div id="token" class="anchor"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\63.png" id="63" data-flag="@X" onclick="openSidebar('63',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\45.png" id="45" data-flag="@X" onclick="openSidebar('45',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\7.png" id="7" data-flag="@X" onclick="openSidebar('7',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\62.png" id="62" data-flag="@X" onclick="openSidebar('62',false)"></div>
-				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
