--- a/previews/AKU.html
+++ b/previews/AKU.html
@@ -306,10 +306,15 @@
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div id="token" class="anchor"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\66.png" id="66" data-flag="@X" onclick="openSidebar('66',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\69.png" id="69" data-flag="@X" onclick="openSidebar('69',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\67.png" id="67" data-flag="@X" onclick="openSidebar('67',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\63.png" id="63" data-flag="@X" onclick="openSidebar('63',false)"></div>
+				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\68.png" id="68" data-flag="@X" onclick="openSidebar('68',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\45.png" id="45" data-flag="@X" onclick="openSidebar('45',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\7.png" id="7" data-flag="@X" onclick="openSidebar('7',false)"></div>
 				<div class="container"><img loading="lazy" alt="/sets\AKU-files\img\62.png" id="62" data-flag="@X" onclick="openSidebar('62',false)"></div>
+				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\e.png" id="e" data-flag="@E" onclick="openSidebar('e',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
 				<div class="container"><img loading="lazy" alt="/img\er.png" id="er" data-flag="@E" onclick="openSidebar('er',false)"></div>
